コメントの追加

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
+    <!-- 神経衰弱作ってみたい -->
     <meta charset="utf-8">
     <!-- タイトル -->
     <title>カードゲーム</title>
