--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <script type = "text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link rel = "stylesheet" href = "./src/stylesheet.css">
   </head>
-  <body>
+  <body onload = "loading()">
+    <!-- 見出し -->
+    <div id = "heading">
+      <button id = "Enterbutton">Enter</button>
+    </div>
     <!-- canvas要素の定義（横幅と縦幅の設定） -->
-    <canvas id = "myCanvas" width = "640" height = "480"></canvas>
+    <div id = "field">
+      <canvas id = "board" width = "640" height = "480"></canvas>
+    </div>
     <!-- jsは最後に、body閉じタグの前に記述する -->
     <script src = "./src/script.js"></script>
   </body>
