カード反転、ひとまず完了

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
   <body onload = "loading()">
     <!-- 見出し -->
     <div id = "heading">
+      <b>CARD GAME</b><br>
+      <p>ゲームを始めるにはクリック又はEnterキー</p>
       <button id = "Enterbutton">Enter</button>
     </div>
     <!-- canvas要素の定義（横幅と縦幅の設定） -->
     <div id = "field">
-      <canvas id = "board" width = "640" height = "480"></canvas>
+      <canvas id = "board" width = "360" height = "540"></canvas>
     </div>
     <!-- jsは最後に、body閉じタグの前に記述する -->
     <script src = "./src/script.js"></script>
