TODOリスト追加

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <!-- 神経衰弱作ってみたい -->
     <meta charset="utf-8">
+    <meta name = "viewport" content = "width = device-width">
     <!-- タイトル -->
     <title>カードゲーム</title>
     <!-- jQueryの準備とcss読み込みの記述 -->
