リセット機能を追加

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     </div>
     <!-- canvas要素の定義（横幅と縦幅の設定） -->
     <div id = "field">
-      <canvas id = "board" width = "360" height = "500"></canvas>
+      <canvas id = "board" width = "360" height = "420"></canvas>
+    </div>
+    <div id = config>
+      <button id = "Resetbutton">Reset</button>
     </div>
     <!-- jsは最後に、body閉じタグの前に記述する -->
     <script src = "./src/script.js"></script>
